<?xml version="1.0" encoding="UTF-8"?>

        <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>

    <artifactId>HW6</artifactId>

    <version>1.0-SNAPSHOT</version>


    <properties>

    <maven.compiler.source>17</maven.compiler.source>

    <maven.compiler.target>17</maven.compiler.target>

    <junit.jupiter.version>5.8.1</junit.jupiter.version>

</properties>


    <dependencies>


    <dependency>

    <groupId>org.junit.jupiter</groupId>

    <artifactId>junit-jupiter-engine</artifactId>

    <version>${junit.jupiter.version}</version>

    <scope>test</scope>

</dependency>


    <dependency>

    <groupId>org.junit.jupiter</groupId>

    <artifactId>junit-jupiter-api</artifactId>

    <version>${junit.jupiter.version}</version>

    <scope>test</scope>

</dependency>


    <dependency>

    <groupId>org.junit.jupiter</groupId>

    <artifactId>junit-jupiter-params</artifactId>

    <version>${junit.jupiter.version}</version>

    <scope>test</scope>

</dependency>

    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->



    <dependency>

    <groupId>org.hibernate</groupId>

    <artifactId>hibernate-core</artifactId>

    <version>5.6.5.Final</version>

</dependency>

    <!-- https://mvnrepository.com/artifact/org.hibernate.jpql/hibernate-jpql-parser -->



    <dependency>

    <groupId>org.hibernate.jpql</groupId>

    <artifactId>hibernate-jpql-parser</artifactId>

    <version>1.0.0.Alpha1</version>

</dependency>

    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->



    <dependency>

    <groupId>org.assertj</groupId>

    <artifactId>assertj-core</artifactId>

    <version>3.22.0</version>

    <scope>test</scope>

</dependency>


    <dependency>

    <groupId>org.postgresql</groupId>

    <artifactId>postgresql</artifactId>

    <version>42.3.1</version>

</dependency>


    <dependency>

    <groupId>org.projectlombok</groupId>

    <artifactId>lombok</artifactId>

    <version>RELEASE</version>

    <scope>compile</scope>

</dependency>

    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->



    <dependency>

    <groupId>org.projectlombok</groupId>

    <artifactId>lombok</artifactId>

    <version>1.18.22</version>

    <scope>provided</scope>

</dependency>

</dependencies>


    <build>


    <plugins>


    <plugin>

    <groupId>org.apache.maven.plugins</groupId>

    <artifactId>maven-compiler-plugin</artifactId>

    <version>3.10.0</version>


    <configuration>

    <source>1.8</source>

    <target>1.8</target>

</configuration>

</plugin>


    <plugin>

    <groupId>org.apache.maven.plugins</groupId>

    <artifactId>maven-surefire-plugin</artifactId>

    <version>2.22.2</version>


    <configuration>

    <argLine> --illegal-access=permit </argLine>

</configuration>

</plugin>


    <plugin>

    <groupId>org.apache.maven.plugins</groupId>

    <artifactId>maven-failsafe-plugin</artifactId>

    <version>2.22.2</version>


    <configuration>

    <argLine> --illegal-access=permit </argLine>

</configuration>

</plugin>

</plugins>

</build>

</project>